--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: "Iranian_Sans";
+  src: local("Iranian_Sans"),
+    url(./assets/fonts/Iranian_Sans.ttf) format("truetype");
+  font-display: block;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+   background-color: rgb(255, 255, 255);
+  background-image: url(../src/assets/pictures/image3.png);
+   background-position:center;
+   background-size:cover;
+   background-repeat: no-repeat;
+
+  /*  background-image: linear-gradient(to bottom, rgb(242, 244, 245) 29%, #3522B3 ,#1C2567); */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@-webkit-keyframes Background {
+  0% {
+    background-position: 0% 50% 
+  }
+  50% {
+    background-position: 100% 50% 
+  }
+  100% {
+    background-position: 0% 00% 
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@-moz-keyframes Background {
+  0% {
+    background-position: 0% 50% 
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
+}
+
+@keyframes Background {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
+}
+
+
+* {
+  
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Iranian_Sans";
+  src: local("Iranian_Sans"),
+    url(./assets/fonts/Iranian_Sans.ttf) format("truetype");
+  font-display: block;
+  
+}
+
+.coin-app {
   display: flex;
   flex-direction: column;
   align-items: center;
+ 
+  
+}
+
+.coin-search {
+  margin-top:20px;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.coin-text {
+  margin-bottom: 32px;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.coin-input {
+  text-align: center;
+  font-size: 20px;
+  padding: 16px;
+  width: 300px;
+  height: 50px;
+  border: none ;
+  border-radius: 30px ;
+  color: #202020;
+}
+
+.coin-input::placeholder {
+  color: #000000;
 }
